--- a/config-yml/field.field.node.publication.field_first_issue_approx_date.yml
+++ b/config-yml/field.field.node.publication.field_first_issue_approx_date.yml
@@ -9,8 +9,8 @@ id: node.publication.field_first_issue_approx_date
 field_name: field_first_issue_approx_date
 entity_type: node
 bundle: publication
-label: 'Verbatim date'
-description: "Enter the <b>first</b> issue date <i>as provided</i> - this value displays <b>in place of</b> the approximate date range.<br>\r\n<b>Example:</b> <tt>2010</tt>\r\n"
+label: 'First Issue Verbatim Date'
+description: "Enter the first issue date <b>as provided</b> - this text will be used as the <b>start</b> of the date range for the <i>Dates of publication</i> field display.<br>\r\n<b>Example:</b> <tt>1784?</tt>\r\n"
 required: false
 translatable: false
 default_value: {  }
