--- a/config-yml/user.role.anonymous.yml
+++ b/config-yml/user.role.anonymous.yml
@@ -1,7 +1,17 @@
 uuid: 8d9b8538-7fa0-429f-a383-00e9eb929ba5
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  config:
+    - filter.format.restricted_html
+  module:
+    - digital_serial_issue
+    - digital_serial_page
+    - digital_serial_title
+    - filter
+    - samlauth
+    - search_api_autocomplete
+    - system
 _core:
   default_config_hash: j5zLMOdJBqC0bMvSdth5UebkprJB8g_2FXHqhfpJzow
 id: anonymous
