--- a/config-yml/user.role.authenticated.yml
+++ b/config-yml/user.role.authenticated.yml
@@ -1,7 +1,16 @@
 uuid: 04fa95fd-e254-4d0f-b908-7b70a13cc1a6
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  config:
+    - filter.format.basic_html
+  module:
+    - digital_serial_issue
+    - digital_serial_page
+    - digital_serial_title
+    - filter
+    - search_api_autocomplete
+    - system
 _core:
   default_config_hash: dJ0L2DNSj5q6XVZAGsuVDpJTh5UeYkIPwKrUOOpr8YI
 id: authenticated
