--- a/custom/modules/panb/panb_institution_import/panb_institution_import.info.yml
+++ b/custom/modules/panb/panb_institution_import/panb_institution_import.info.yml
@@ -1,6 +1,8 @@
-name: panb_institution_import
+name: PANB Institution Import
 type: module
-description: PANB Institution Vocabulary Import Tool
+description: PANB Institution Vocabulary One-time Import Tool
 core: 8.x
 core_version_requirement: ^8 || ^9
 package: PANB
+dependencies:
+  - panb
