NBNP-318 Serial Holding:add css library asset

--- a/custom/modules/serials/modules/serial_holding/serial_holding.libraries.yml
+++ b/custom/modules/serials/modules/serial_holding/serial_holding.libraries.yml
@@ -1,4 +1,7 @@
 serial-holding-form:
+  css:
+    theme:
+      css/serial-holding-form.css: {}
   js:
     js/serial-holding-form.js: {}
   dependencies:
