NBNP-318 Add Institution term reserved for digital holdings

--- a/custom/modules/panb/data/panb.taxonomy.sample.terms.yml
+++ b/custom/modules/panb/data/panb.taxonomy.sample.terms.yml
@@ -235,3 +235,7 @@ institution:
     name: Université Laval, general library, QC
     french_label: Université Laval, Bibliothèque générale, QC
     panb_code: QQLA
+  -
+    name: University of New Brunswick
+    french_label:
+    panb_code:
