--- a/config-yml/core.entity_view_display.node.publication.featured.yml
+++ b/config-yml/core.entity_view_display.node.publication.featured.yml
@@ -27,6 +27,7 @@ dependencies:
     - field.field.node.publication.field_last_issue_search_date
     - field.field.node.publication.field_last_issue_sort_date
     - field.field.node.publication.field_marc_frequency
+    - field.field.node.publication.field_microfilmed_by
     - field.field.node.publication.field_oclc
     - field.field.node.publication.field_place_of_publication
     - field.field.node.publication.field_previous_identifications
@@ -180,6 +181,7 @@ hidden:
   field_language: true
   field_last_issue_search_date: true
   field_last_issue_sort_date: true
+  field_microfilmed_by: true
   field_oclc: true
   field_previous_identifications: true
   field_publisher: true
