--- a/config-yml/core.entity_view_display.node.publication.teaser.yml
+++ b/config-yml/core.entity_view_display.node.publication.teaser.yml
@@ -7,11 +7,15 @@ dependencies:
     - field.field.node.publication.field_additional_indexed_text
     - field.field.node.publication.field_credit
     - field.field.node.publication.field_description
+    - field.field.node.publication.field_editor
     - field.field.node.publication.field_family
+    - field.field.node.publication.field_featured
     - field.field.node.publication.field_first_issue_approx_date
     - field.field.node.publication.field_first_issue_date
     - field.field.node.publication.field_first_issue_date_type
+    - field.field.node.publication.field_first_issue_search_date
     - field.field.node.publication.field_first_issue_sort_date
+    - field.field.node.publication.field_frequency
     - field.field.node.publication.field_frequency_notes
     - field.field.node.publication.field_geographic_coverage
     - field.field.node.publication.field_is_supplementary_title
@@ -20,9 +24,13 @@ dependencies:
     - field.field.node.publication.field_last_issue_approx_date
     - field.field.node.publication.field_last_issue_date
     - field.field.node.publication.field_last_issue_date_type
+    - field.field.node.publication.field_last_issue_search_date
     - field.field.node.publication.field_last_issue_sort_date
+    - field.field.node.publication.field_marc_frequency
+    - field.field.node.publication.field_microfilmed_by
     - field.field.node.publication.field_oclc
     - field.field.node.publication.field_place_of_publication
+    - field.field.node.publication.field_previous_identifications
     - field.field.node.publication.field_publisher
     - field.field.node.publication.field_sample_image
     - field.field.node.publication.field_serial_relation_pre_ref_dn
@@ -79,6 +87,7 @@ hidden:
   field_last_issue_search_date: true
   field_last_issue_sort_date: true
   field_marc_frequency: true
+  field_microfilmed_by: true
   field_oclc: true
   field_place_of_publication: true
   field_previous_identifications: true
