--- a/config-yml/core.entity_form_display.serial_holding.serial_holding.default.yml
+++ b/config-yml/core.entity_form_display.serial_holding.serial_holding.default.yml
@@ -92,7 +92,10 @@ content:
     settings:
       rows: 5
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '1'
     text_processing: 0
   holding_retention:
     type: string_textfield
