--- a/config-yml/editor.editor.basic_html.yml
+++ b/config-yml/editor.editor.basic_html.yml
@@ -30,11 +30,6 @@ settings:
             - BulletedList
             - NumberedList
         -
-          name: Media
-          items:
-            - Blockquote
-            - DrupalImage
-        -
           name: 'Block Formatting'
           items:
             - Format
@@ -43,6 +38,8 @@ settings:
           items:
             - Source
   plugins:
+    language:
+      language_list: un
     stylescombo:
       styles: ''
 image_upload:
@@ -51,5 +48,5 @@ image_upload:
   directory: inline-images
   max_size: ''
   max_dimensions:
-    width: 0
-    height: 0
+    width: null
+    height: null
