NBNP-344 Allow Newspaper Adminstator to View+Revert Publication revisions before Jeff is accused of lying

--- a/config-yml/user.role.newspaper_administrator.yml
+++ b/config-yml/user.role.newspaper_administrator.yml
@@ -47,9 +47,11 @@ permissions:
   - 'edit serial page entities'
   - 'edit terms in publisher'
   - 'override publication published option'
+  - 'revert publication revisions'
   - 'use text format full_html'
   - 'view any unpublished publication content'
   - 'view own unpublished content'
+  - 'view publication revisions'
   - 'view published serial holding entities'
   - 'view the administration theme'
   - 'view unpublished digital serial title entities'
