NBNP-346 Search View: relabel the reset button

--- a/config-yml/views.view.search.yml
+++ b/config-yml/views.view.search.yml
@@ -514,7 +514,7 @@ display:
         options:
           submit_button: 'Browse/Search Titles'
           reset_button: true
-          reset_button_label: Clear
+          reset_button_label: 'Show All Titles'
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
           sort_asc_label: Asc
