--- a/config-yml/core.entity_form_display.node.publication.default.yml
+++ b/config-yml/core.entity_form_display.node.publication.default.yml
@@ -28,6 +28,7 @@ dependencies:
     - field.field.node.publication.field_marc_frequency
     - field.field.node.publication.field_microfilmed_by
     - field.field.node.publication.field_oclc
+    - field.field.node.publication.field_panb_id
     - field.field.node.publication.field_place_of_publication
     - field.field.node.publication.field_previous_identifications
     - field.field.node.publication.field_publisher
@@ -434,6 +435,14 @@ content:
   field_oclc:
     type: string_textfield
     weight: 15
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_panb_id:
+    type: string_textfield
+    weight: 43
     region: content
     settings:
       size: 60
