NBNP-328 Add PANB id field to import

--- a/custom/modules/panb_title_content/config/install/migrate_plus.migration.0_a_panb_title_content.yml
+++ b/custom/modules/panb_title_content/config/install/migrate_plus.migration.0_a_panb_title_content.yml
@@ -18,6 +18,7 @@ process:
     plugin: default_value
     default_value: unpublished
   title: 'Title'
+  field_panb_id: 'ID'
   field_language:
     plugin: default_value
     default_value: ''
