NBNP-328 Remove MS quotes from migrate titles, generate sort title

--- a/custom/modules/panb_title_content/config/install/migrate_plus.migration.0_a_panb_title_content.yml
+++ b/custom/modules/panb_title_content/config/install/migrate_plus.migration.0_a_panb_title_content.yml
@@ -17,7 +17,8 @@ process:
   status:
     plugin: default_value
     default_value: unpublished
-  title: 'Title'
+  title: title_processed
+  field_sort_title: sort_title_processed
   field_panb_id: 'ID'
   field_language: language_processed
   field_place_of_publication/langcode:
