--- a/config-yml/views.view.print_title_listing.yml
+++ b/config-yml/views.view.print_title_listing.yml
@@ -10,6 +10,7 @@ dependencies:
     - address
     - node
     - serial_holding
+    - taxonomy
     - user
 id: print_title_listing
 label: 'Print Title Listing'
@@ -25,7 +26,7 @@ display:
     display_plugin: default
     position: 0
     display_options:
-      title: 'Current Print Subscriptions of Newspapers'
+      title: 'Current UNB Libraries Print Subscriptions of Newspapers'
       fields:
         holding_type:
           id: holding_type
@@ -326,7 +327,7 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: ''
+          empty: '<small>[Not specified]</small>'
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
@@ -506,6 +507,71 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
+          empty: '<small>[Not specified]</small>'
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+        name:
+          id: name
+          table: taxonomy_term_field_data
+          field: name
+          relationship: holding_institution
+          group_type: group
+          admin_label: 'Institution Name Filter'
+          entity_type: taxonomy_term
+          entity_field: name
+          plugin_id: term_name
+          label: 'Institution Name'
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
           empty: ''
           hide_empty: false
           empty_zero: false
@@ -524,6 +590,7 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+          convert_spaces: false
       pager:
         type: full
         options:
@@ -714,6 +781,47 @@ display:
             default_group: All
             default_group_multiple: {  }
             group_items: {  }
+        name:
+          id: name
+          table: taxonomy_term_field_data
+          field: name
+          relationship: holding_institution
+          group_type: group
+          admin_label: ''
+          entity_type: taxonomy_term
+          entity_field: name
+          plugin_id: string
+          operator: contains
+          value: 'UNB Libraries'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
       style:
         type: table
         options:
@@ -815,6 +923,17 @@ display:
           entity_field: parent_title
           plugin_id: standard
           required: false
+        holding_institution:
+          id: holding_institution
+          table: serial_holding
+          field: holding_institution
+          relationship: none
+          group_type: group
+          admin_label: 'Taxonomy term'
+          entity_type: serial_holding
+          entity_field: holding_institution
+          plugin_id: standard
+          required: false
       css_class: search-results
       use_ajax: true
       header:
@@ -827,7 +946,7 @@ display:
           admin_label: ''
           plugin_id: result
           empty: false
-          content: '<h2 class="alert alert-success"><i class="fas fa-check-circle fa-sm mr-1"></i>Displaying @start - @end of @total results</h2>'
+          content: "<h2 class=\"alert alert-success\">\r\n<i class=\"fas fa-check-circle fa-sm\"></i>\r\nDisplaying @start - @end of @total results\r\n</h2>"
       footer: {  }
       display_extenders: {  }
     cache_metadata:
