--- a/config-yml/views.view.print_title_listing.yml
+++ b/config-yml/views.view.print_title_listing.yml
@@ -615,9 +615,9 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: 'Apply Filter'
+          submit_button: Go
           reset_button: true
-          reset_button_label: Reset
+          reset_button_label: 'Show All'
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
           sort_asc_label: Asc
@@ -792,7 +792,7 @@ display:
           entity_field: name
           plugin_id: string
           operator: contains
-          value: 'UNB Libraries'
+          value: 'UNB Libraries, Fredericton'
           group: 1
           exposed: false
           expose:
