--- a/config-yml/core.entity_form_display.taxonomy_term.institution.default.yml
+++ b/config-yml/core.entity_form_display.taxonomy_term.institution.default.yml
@@ -6,11 +6,21 @@ dependencies:
     - field.field.taxonomy_term.institution.field_french_label
     - field.field.taxonomy_term.institution.field_panb_code
     - taxonomy.vocabulary.institution
+  module:
+    - text
 id: taxonomy_term.institution.default
 targetEntityType: taxonomy_term
 bundle: institution
 mode: default
 content:
+  description:
+    type: text_textarea
+    weight: 3
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
   field_french_label:
     type: string_textfield
     weight: 1
@@ -29,7 +39,7 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 3
+    weight: 4
     region: content
     settings:
       include_locked: true
@@ -44,11 +54,10 @@ content:
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 4
+    weight: 5
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
 hidden:
-  description: true
   path: true
