--- a/config-yml/core.entity_view_display.taxonomy_term.institution.default.yml
+++ b/config-yml/core.entity_view_display.taxonomy_term.institution.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.taxonomy_term.institution.field_french_label
     - field.field.taxonomy_term.institution.field_panb_code
+    - field.field.taxonomy_term.institution.field_short_name
     - taxonomy.vocabulary.institution
   module:
     - text
@@ -19,6 +20,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 0
+    region: content
+  field_short_name:
+    type: string
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 1
     region: content
 hidden:
   field_french_label: true
